Make mobile nav fixed
This commit also makes the min height 100% instead of 100vh to avoid the nav being hidden under the fold on mobile browsers, which use the entire height of the screen for viewport units, including the search bar.

--- a/public/style/global.css
+++ b/public/style/global.css
@@ -30,6 +30,7 @@
 }
 
 html {
+  @apply h-full;
   font-family: "Fern Web", Georgia, "Times New Roman", Times, serif;
   --bg: var(--white);
   --bg-subtle: var(--white-subtle);
